--- a/.github/workflows/release-management.yml
+++ b/.github/workflows/release-management.yml
@@ -1,6 +1,7 @@
 name: Release Management
 
 on:
+  workflow_dispatch:
   push:
     # branches to consider in the event; optional, defaults to all
     branches:
